# qplot

./: .bzrignore  .gitignore  .sync-conflict-20210730-134035-4M6RPLJ.gitignore  Axis.C  Axis.H  CHANGELOG  CMakeLists.txt  CmdAlign.C  CmdAlign.H  CmdArea.C  CmdAt.C  CmdAt.H  CmdBrush.C  CmdFigSize.C  CmdFigSize.H  CmdFont.C  CmdFont.H  CmdFudge.C  CmdFudge.H  CmdHairline.C  CmdLine.C  CmdPanel.C  CmdPatch.C  CmdPatch.H  CmdPen.C  CmdPen.H  CmdPlot.C  CmdPlot.H  CmdRefText.C  CmdText.C  CmdText.H  CmdXLim.H  CmdYLim.H  Command.C  Command.H  DebPack.CMakeLists.txt  Error.C  Error.H  Figure.C  Figure.H  (+44 more)
.github/: get-build-requirements  get-docs-requirements
.github/workflows/: build.yml  documentation.yml  install-nsis.yml  linuxbuild.yml  push.yml  uploaddeb.yml  uploadexe.yml  wheels.yml  winbuild.yml
backend/: localimport.py
backend/docs/: directuse-eg.qpt  qplot-directuse.tex
backend/python/: align.py  cmdalign.py  cmdalignaxes.py  cmdat.py  cmdbrush.py  cmdcaligraph.py  cmdcommonscale.py  cmdendgroup.py  cmdfigsize.py  cmdfont.py  cmdgline.py  cmdgroup.py  cmdhairline.py  cmdhatch.py  cmdimage.py  cmdimageg.py  cmdmark.py  cmdmarker.py  cmdpanel.py  cmdpen.py  cmdplot.py  cmdrebalance.py  cmdreftext.py  cmdsave.py  cmdshrink.py  cmdtext.py  cmdtextonpath.py  cmdxlim.py  cmdxzimage.py  cmdylim.py  cmdzyimage.py  command.py  error.py  factor.py  figure.py  filereader.py  groupdata.py  image.py  main.py  marker.py  (+11 more)
backend/src/: Axis.cpp  CMakeLists.txt  CmdAlign.h  CmdAlignAxes.cpp  CmdAlignAxes.h  CmdAt.h  CmdBrush.h  CmdCaligraph.h  CmdCommonScale.h  CmdEndGroup.cpp  CmdFigSize.h  CmdFont.cpp  CmdGLine.cpp  CmdGLine.h  CmdGroup.cpp  CmdHairline.cpp  CmdHatch.cpp  CmdImage.cpp  CmdImage.h  CmdImageG.cpp  CmdImageG.h  CmdMark.cpp  CmdMarker.h  CmdPanel.h  CmdPen.cpp  CmdPlot.cpp  CmdRebalance.h  CmdRefText.cpp  CmdRefText.h  CmdShrink.cpp  CmdShrink.h  CmdText.cpp  CmdTextOnPath.cpp  CmdYLim.cpp  CmdYLim.h  CmdZYImage.cpp  CmdZYImage.h  Command.cpp  Error.cpp  Error.h  (+24 more)
backend/tools/: updatesources.sh
debian/: changelog  control  copyright  files  gbp.conf  install  mkdeb  qplot.desktop  qplot.substvars  rules
doc/: Makefile  Makefile.doc  alleg.m  apply-gpl.pl  directuse.tex  m2html.pl  manual.tex  matlab-org.txt  mkalpha.pl  mkcatg.pl  python-org.txt  qplot-directuse.sync-conflict-20210730-134019-4M6RPLJ.tex  qplot-directuse.tex
doc/css/: alpha.css  doc.css  web.css
doc/examples/: eg_dash.m  eg_dash.qpt  eg_imsc.qpt  eg_legend.m  eg_sharelim.m  eg_sharelim.qpt  eg_sharelim2.qpt  eg_text.m  eg_text.qpt  eg_ticklen.m  example.txt  foo.m  panelfudge.txt  qaxis_eg.qpt  textoncurve.txt
doc/home/: eg_bars.m  eg_bars.py  eg_circ.m  eg_circ.py  eg_ephys.m  eg_gline.m  eg_gline.py  eg_imsc.m  eg_imsc.py  home.html  index.html  octref.html  octtut.html  pyref.html  pytut.html  ref.html  tut.html
doc/html/: alleg.m  download.html  downloads.html  home.html  index.html  m2html.pl  mkalpha.pl  mkcatg.pl
doc/matlab-eg/: axshift.qpt  qalign.qpt  qalign_eg.m  qarea.qpt  qarea_eg.m  qarrow  qat.qpt  qat_eg.m  qaxshift_eg.m  qbars  qbars_eg.m  qbrush.qpt  qbrush_eg.m  qcaxis.qpt  qcaxis_eg.m  qcbar.qpt  qcbar_eg.m  qcbard_eg.m  qcbarh.qpt  qcbarh_eg.m  qdarrow.qpt  qdarrow_eg.m  qecoplot.qpt  qecoplot_eg.m  qendgroup_eg.m  qerrorbar.qpt  qerrorbar_eg.m  qerrorpatch.qpt  qerrorpatch_eg.m  qfigure_eg.m  qfont_eg  qfont_eg.m  qgarea.qpt  (+50 more)
docs/: Makefile  home.html
examples/: eg_axis.m  eg_imsc.m  eg_mark.m  eg_text.m  eg_ticklen.m  eg_ticklen.qpt  example.txt  fudgetest.qpt  panelfudge.txt  qaxis_eg.m  qimsc_eg.m  qmark_eg.m  qmark_eg.qpt  qtext_eg.qpt
matlab/: TODO  clq.m  qalign.m  qarea.m  qarrow.m  qat.m  qaxshift.m  qbars.m  qbrush.m  qcaligraph.m  qcaxis.m  qcbar.m  qcbard.m  qcbarh.m  qclf.m  qclose.m  qcolorbar.m  qctext.m  qcumul.m  qdarrow.m  qecoplot.m  qendgroup.m  qerrorbar.m  qerrorpatch.m  qfigure.m  qfont.m  qfudge.m  qgarea.m  qgimage.m  qgline.m  qgroup.m  qhairline.m  qimage.m  qimsc.m  qlegend.m  qlegopt.m  qline.m  qlut.m  qmark.m  qmarker.m  (+31 more)
octave/: Install.CMakeLists.txt
placeqpt/: eg.txt  eg1.qpt  placeqpt  placeqpt-backend  placeqpt.pl
pyplaceqpt/: placeqpt
pyqplot/: Install.CMakeLists.txt  __init__.py  all.py  axes.py  data.py  data.sync-conflict-20210730-134716-4M6RPLJ.py  fig.py  fig.sync-conflict-20210730-134020-4M6RPLJ.py  img.py  luts.py  markup.py  paper.py  paper.sync-conflict-20210730-134705-4M6RPLJ.py  qi.py  qi.sync-conflict-20210730-134111-4M6RPLJ.py  style.py  style.sync-conflict-20210730-134551-4M6RPLJ.py  utils.py
python/: fig.py  hello.qpt  paper.py  qplot-bits.py  qplot.py  qplot_internal.py
qplot-0.1.1/: .matlabdoc  qcolorbar.m  qfont.m  qimsc.m  qmark.m  qmticks.m  qplot.m  qprint.m  qxaxis.m
qplot-0.1.2/: qcaligraph.m  qcaxis.m  qfigure.m  qfont.m  qhcbar.m  qimage.m  qimsc.m  qmark.m  qmm.m  qsubplot.m  qvcbar.m  qxaxis.m  qyaxis.m  qytitlerot.m
scripts/: qpclient  qpclient.sh  qplotml
src/: Align.H  Align.h  Axis.C  Axis.H  Axis.cpp  Axis.h  CMakeLists.txt  CmdAlign.C  CmdAlign.H  CmdAlign.cpp  CmdAlignAxes.cpp  CmdAlignAxes.h  CmdArea.C  CmdArea.H  CmdAt.C  CmdAt.H  CmdAt.cpp  CmdAt.h  CmdBrush.C  CmdBrush.H  CmdBrush.cpp  CmdCaligraph.H  CmdCaligraph.cpp  CmdCaligraph.sync-conflict-20210730-134200-4M6RPLJ.cpp  CmdCommonScale.cpp  CmdCommonScale.h  CmdCumul.C  CmdCumul.H  CmdEndGroup.H  CmdEndGroup.cpp  CmdEndGroup.h  CmdEndGroup.sync-conflict-20210730-134545-4M6RPLJ.cpp  CmdFigSize.H  CmdFigSize.cpp  CmdFigSize.sync-conflict-20210730-134705-4M6RPLJ.cpp  CmdFont.C  CmdFont.H  CmdFont.cpp  CmdFont.h  CmdFudge.C  (+156 more)
study/: panel.py  zoom.py
tools/: alleg.m  apply-gpl.pl  checkpyeg.py  eg2py.py  ensurexvfb  install_qt_dev.py  lutdemo.py  m2html.pl  makecmake  matlabdoc  mkalpha.pl  mkcatg.pl  mkpyalpha.py  mkpycatg.py  oct2py.py  octavee  octavex  py2html.py  pyalleg.py  pyqplot  qplot-x64.iss  qplot.desktop  quicktestwin.py  runmeg.m  runpyeg.py  testreset.py  updatesources.py  updatesources.sh  win64deploy.py
web/: Makefile.web  css  doc.html  downloads.html  home.html  qplot.tgz  ref  tut  tut.html
(+490 files in other folders)
