[build-system]
build-backend = "scikit_build_core.build"
requires = [
    "scikit-build-core>=0.9",
    "PyQt6>=6.10",
    "aqtinstall"
]

[project]
name = "pyqplot"
version = "0.3.0"
description = "QPlot"
requires-python = ">=3.9"
dependencies = [
    "PyQt6",
    "numpy>=1.26"
]

[project.urls]
Homepage = "https://github.com/wagenadl/qplot"

[tool.scikit-build]
# Tells scikit-build-core where your package lives
wheel.packages = ["python/pyqplot"]
cmake.build-type = "Release"
# Include compiled artifacts (the binary + the .so extension)
wheel.install-dir = "pyqplot"
cmake.minimum-version = "3.15"

[tool.cibuildwheel]
# Build for CPython 3.9–3.13, skip PyPy and 32-bit Windows
#build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
build = "cp39-*"
skip = "*-win32 *-musllinux*"
##before-build = "pip install PyQt6 aqtinstall && python tools/install_qt_dev.py"
# Run your test suite after each wheel build
test-requires = ["PyQt6>=6.10"]
test-command = "python -c \"import qplot;\""

[tool.cibuildwheel.macos]
# Build a universal2 wheel covering both Intel and Apple Silicon
archs = ["universal2"]

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "quay.io/pypa/manylinux_2_34"
manylinux-aarch64-image = "quay.io/pypa/manylinux_2_39"


