[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyqplot"
dynamic = ["version"]
dependencies = [
    "numpy",
    "pyqt6",
]
requires-python = ">=3.8"

[project.scripts]
qplot = "qplot_backend.main:main"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.+)"

[tool.hatch.build.targets.wheel]
packages = ["python/qplot", "python/qplot_backend"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"
